// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Swipeable /> prop className should match snapshot when class name test is passed 1`] = `
<DocumentFragment>
  <div
    class="SwipeableStyle__SwipeableContainer-xvh6jb-0 jcQVJk aries-swipeable test"
  >
    <div
      class="SwipeableStyle__SwipeableItemWrapper-xvh6jb-1 dajSAo swipeable-itemwrapper test"
    >
      Item
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Swipeable /> prop className should match snapshot when class name undefined is passed 1`] = `
<DocumentFragment>
  <div
    class="SwipeableStyle__SwipeableContainer-xvh6jb-0 jcQVJk aries-swipeable"
  >
    <div
      class="SwipeableStyle__SwipeableItemWrapper-xvh6jb-1 dajSAo swipeable-itemwrapper"
    >
      Item
    </div>
  </div>
</DocumentFragment>
`;
